[package]
authors = ["alexhallam <alexhallam6.28@gmail.com>"]
categories = ["command-line-utilities"]
description = "Clean csv column names"
name = "mop"
version = "0.1.0"
edition = "2021"
keywords = ['csv']
license = "Unlicense OR MIT"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
deunicode = "1.6.0"
regex = "1.11.0"
unicode-segmentation = "1.12.0"
